--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                 <div class="hero-detail">
                     <h3 class="heading3 white none">Building largest Startup Community.</h3>
                     <p class="hero-p">The only way to be a part of the largest growing startup community.</p>
-                    <a data-w-id="6e736065-2c9f-2792-9f3f-ad7fc6d5e3de" href="#" class="button-3 w100 w-inline-block">
+                    <a data-w-id="6e736065-2c9f-2792-9f3f-ad7fc6d5e3de" href="#community" class="button-3 w100 w-inline-block">
                         <div class="btn-text">Connect Community</div>
                         <div class="btn-icon">
                             <div style="-webkit-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)"
@@ -1009,7 +1009,7 @@
 
                                 <!-- instagram -->
                                 <div role="listitem" class="toolsitem w-dyn-item">
-                                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                                    <a href="https://www.instagram.com/metasapiens.comm" target="_blank" rel="noopener noreferrer">
                                         <div class="tools-item">
                                             <div style="background-color:#506bf0" class="toolsimg"><img src="/Img/group-3/625d7ea5a23155b50c5fce34_cricle.svg" loading="eager" alt="" /></div>
                                             <div class="toolsbox">
