Fix: minor errors

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8" />
     <title>MetaSapiens - Building Largest Startup Community</title>
     <meta content="The only toolset you need to operate and grow your online courses and membership communities." name="description" />
-    <meta content="Burb - How Creators Grow Community" property="og:title" />
+    <meta content="MetaSapiens - Building Largest Startup Community" property="og:title" />
     <meta content="The only toolset you need to operate and grow your online courses and membership communities." property="og:description" />
     <meta content="/Img/group-2/625d7ea5a23155f9ed5fcdd5_hero-img.png" property="og:image" />
-    <meta content="Burb - How Creators Grow Community" property="twitter:title" />
+    <meta content="MetaSapiens - Building Largest Startup Community" property="twitter:title" />
     <meta content="The only toolset you need to operate and grow your online courses and membership communities." property="twitter:description" />
     <meta content="/Img/group-2/625d7ea5a23155f9ed5fcdd5_hero-img.png" property="twitter:image" />
     <meta property="og:type" content="website" />
@@ -967,7 +967,7 @@
                                 <div role="listitem" class="toolsitem w-dyn-item">
                                     <a href="https://chat.whatsapp.com/DUAcLncwznqKizb6D0RMhb" target="_blank" rel="noopener noreferrer">
                                         <div class="tools-item">
-                                            <div style="background-color:#38D754" class="toolsimg"><img src="/Img/group-3/625d7ea5a2315573f05fce47_thinkfic.svg" loading="eager" alt="" /></div>
+                                            <div style="background-color:#38D754" class="toolsimg"><img src="/Img/group-3/whatsapp logo.svg" loading="eager" alt="" /></div>
                                             <div class="toolsbox">
                                                 <div class="subheading2 bold">WhatsApp</div>
                                                 <div>Community Platform</div>
@@ -979,7 +979,7 @@
 
 
                                 <!-- Telegram -->
-                                <div role="listitem" class="toolsitem w-dyn-item">
+                                <!-- <div role="listitem" class="toolsitem w-dyn-item">
                                     <a href="https://t.me/MetaSapiensComm" target="_blank" rel="noopener noreferrer">
                                         <div class="tools-item">
                                             <div style="background-color:#34A9DB" class="toolsimg"><img src="/Img/group-3/625d7ea5a2315568745fce6b_convertkit.svg" loading="eager" alt="" /></div>
@@ -989,12 +989,12 @@
                                             </div>
                                         </div>
                                     </a>
-                                </div>
+                                </div> -->
                                 <!-- end -->
 
 
                                 <!-- twitter -->
-                                <div role="listitem" class="toolsitem w-dyn-item">
+                                <!-- <div role="listitem" class="toolsitem w-dyn-item">
                                     <a href="https://twitter.com/MetaSapienscomm" target="_blank" rel="noopener noreferrer">
                                         <div class="tools-item">
                                             <div style="background-color:#4a154b" class="toolsimg"><img src="/Img/group-3/625d7ea5a23155a42c5fcdfa_slack.svg" loading="eager" alt="" /></div>
@@ -1004,11 +1004,11 @@
                                             </div>
                                         </div>
                                     </a>
-                                </div>
+                                </div> -->
                                 <!-- end -->
 
                                 <!-- instagram -->
-                                <div role="listitem" class="toolsitem w-dyn-item">
+                                <!-- <div role="listitem" class="toolsitem w-dyn-item">
                                     <a href="https://www.instagram.com/metasapiens.comm" target="_blank" rel="noopener noreferrer">
                                         <div class="tools-item">
                                             <div style="background-color:#506bf0" class="toolsimg"><img src="/Img/group-3/625d7ea5a23155b50c5fce34_cricle.svg" loading="eager" alt="" /></div>
@@ -1018,11 +1018,11 @@
                                             </div>
                                         </div>
                                     </a>
-                                </div>
+                                </div> -->
                                 <!-- end -->
 
                                 <!-- linkedin -->
-                                <div role="listitem" class="toolsitem w-dyn-item">
+                                <!-- <div role="listitem" class="toolsitem w-dyn-item">
                                     <a href="https://www.linkedin.com/company/metasepians/" target="_blank" rel="noopener noreferrer">
                                         <div class="tools-item">
                                             <div style="background-color:#21cd9c" class="toolsimg"><img src="/Img/group-3/625d7ea5a23155166a5fce5a_teachable.svg" loading="eager" alt="" /></div>
@@ -1032,7 +1032,7 @@
                                             </div>
                                         </div>
                                     </a>
-                                </div>
+                                </div> -->
                                 <!-- end -->
 
 
