--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
 
                                 <!-- Discord -->
                                 <div role="listitem" class="toolsitem w-dyn-item">
-                                    <a href="https://www.metasapiens.tech/discord" target="_blank" rel="noopener noreferrer">
+                                    <a href="https://discord.gg/XJkArUbmS8" target="_blank" rel="noopener noreferrer">
                                         <div class="tools-item">
                                             <div style="background-color:#5865f2" class="toolsimg"><img src="/Img/group-3/625d7ea5a2315528fd5fce0e_discrod.svg" loading="eager" alt="" /></div>
                                             <div class="toolsbox">
@@ -1011,7 +1011,7 @@
                                 <!-- WhatsApp -->
 
                                 <div role="listitem" class="toolsitem w-dyn-item">
-                                    <a href="https://www.metasapiens.tech/whatsapp" target="_blank" rel="noopener noreferrer">
+                                    <a href="https://chat.whatsapp.com/DUAcLncwznqKizb6D0RMhb" target="_blank" rel="noopener noreferrer">
                                         <div class="tools-item">
                                             <div style="background-color:#38D754" class="toolsimg"><img src="/Img/group-3/whatsapp logo.svg" loading="eager" alt="" /></div>
                                             <div class="toolsbox">
