--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>MetaSapiens - Building Largest Startup Community</title>
-    <meta content="The only toolset you need to operate and grow your online courses and membership communities." name="description" />
-    <meta content="MetaSapiens - Building Largest Startup Community" property="og:title" />
-    <meta content="The only toolset you need to operate and grow your online courses and membership communities." property="og:description" />
+    <title>MetaSapiens Ventures - Accelerating innovation for a better world</title>
+    <meta content="Accelerating innovation for a better world" name="description" />
+    <meta content="MetaSapiens - Accelerating innovation for a better world" property="og:title" />
+    <meta content="Accelerating innovation for a better world" property="og:description" />
     <meta content="/Img/group-2/625d7ea5a23155f9ed5fcdd5_hero-img.png" property="og:image" />
     <meta content="MetaSapiens - Building Largest Startup Community" property="twitter:title" />
-    <meta content="The only toolset you need to operate and grow your online courses and membership communities." property="twitter:description" />
+    <meta content="Accelerating innovation for a better world."twitter:description" />
     <meta content="/Img/group-2/625d7ea5a23155f9ed5fcdd5_hero-img.png" property="twitter:image" />
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
